# BWIC

./: README.md  app.py  dealers.json  pyproject.toml  render_demo.py
Graam/: Dockerfile  GraamFlows.sln  LICENSE  README.md
Graam/src/GraamFlows.Api/: GraamFlows.Api.csproj  Program.cs
Graam/src/GraamFlows.Api/Controllers/: CalcCollateralController.cs  PricingController.cs  WaterfallController.cs
Graam/src/GraamFlows.Api/Models/: CalcCollateralModels.cs  FactorEntryConverter.cs  PricingModels.cs  WaterfallModels.cs
Graam/src/GraamFlows.Api/Samples/: colt1804_unified.json  stacr25dna1_unified.json  stacr25dna4_unified.json
Graam/src/GraamFlows.Api/Transformers/: UnifiedWaterfallBuilder.cs  WaterfallBuilder.cs
Graam/src/GraamFlows.Cli/: GraamFlows.Cli.csproj  Program.cs
Graam/src/GraamFlows.Cli/Commands/: RunCommand.cs  WalTestsCommand.cs
Graam/src/GraamFlows.Cli/Models/: CliOptions.cs
Graam/src/GraamFlows.Core/: CfCore.cs  GraamFlows.Core.csproj
Graam/src/GraamFlows.Domain/: Asset.cs  Database.cs  Deal.cs  DealFieldValue.cs  DealStructure.cs  DealStructurePseudo.cs  DealTrigger.cs  DealVariables.cs  ExchShare.cs  GraamFlows.Domain.csproj  PayRule.cs  ScheduledVariable.cs  Tranche.cs
Graam/src/GraamFlows.Objects/: GraamFlows.Objects.csproj
Graam/src/GraamFlows.Util/: GraamFlows.Util.csproj
examples/: demo_aaa_bwic.py
src/graam/: __init__.py  amortizer.py  analytics.py  bwic_pricing.py  bwic_workflow.py  day_counters.py  enums.py  interest_rate.py  intex_loader.py  models.py  solvers.py
src/graam/waterfall/: __init__.py  structures.py
(+173 files in other folders)
