[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graam"
version = "0.1.0"
description = "Python port of the Graam structured-credit execution engine (collateral, waterfall, pricing)"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.9.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graam"]

[tool.ruff]
line-length = 100
target-version = "py311"
